# docs/swagger.yaml
@@ -236,6 +236,15 @@ paths:
   /activity-logs:
     get:
       description: Get all activity logs
+      parameters:
+      - description: Limit (default 100, max 1000)
+        in: query
+        name: limit
+        type: integer
+      - description: Offset (default 0)
+        in: query
+        name: offset
+        type: integer
       produces:
       - application/json
       responses:
